--- a/officers.html
+++ b/officers.html
@@ -19,7 +19,7 @@
         <!-- Navigation -->
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <div class="dropdown">
                     <span>Officers</span>
