--- a/index.html
+++ b/index.html
@@ -39,6 +39,79 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <img src="images/banner.png" alt="banner" class="center", style="width:1000px">
 
 
+        <!-- Timeline of Events, you can add pics with FB events and make them links to the FB event page-->
+        <section id=timeline>
+            <h1>Current Events</h1>
+            <p class="leader">Check out our most recent and upcoming events! Click each event for the FB page with more details!</p>
+            <div class="demo-card-wrapper">
+                <div class="demo-card demo-card--step1">
+                    <div class="head">
+                        <div class="number-box">
+                            <span>01</span>
+                        </div>
+                        <h2><span class="small">March 1</span> Event One</h2>
+                    </div>
+                    <div class="body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
+                        <img src="http://placehold.it/1000x500" alt="Graphic">
+                    </div>
+                </div>
+
+                <div class="demo-card demo-card--step2">
+                    <div class="head">
+                        <div class="number-box">
+                            <span>02</span>
+                        </div>
+                        <h2><span class="small">March 2</span> Event Two</h2>
+                    </div>
+                    <div class="body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
+                        <img src="http://placehold.it/1000x500" alt="Graphic">
+                    </div>
+                </div>
+
+                <div class="demo-card demo-card--step3">
+                    <div class="head">
+                        <div class="number-box">
+                            <span>03</span>
+                        </div>
+                        <h2><span class="small">March 3</span> Event Three</h2>
+                    </div>
+                    <div class="body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
+                        <img src="http://placehold.it/1000x500" alt="Graphic">
+                    </div>
+                </div>
+
+                <div class="demo-card demo-card--step4">
+                    <div class="head">
+                        <div class="number-box">
+                            <span>04</span>
+                        </div>
+                        <h2><span class="small">March 4</span> Event Four</h2>
+                    </div>
+                    <div class="body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
+                        <img src="http://placehold.it/1000x500" alt="Graphic">
+                    </div>
+                </div>
+
+                <div class="demo-card demo-card--step5">
+                    <div class="head">
+                        <div class="number-box">
+                            <span>05</span>
+                        </div>
+                        <h2><span class="small">March 5</span> Event Five </h2>
+                    </div>
+                    <div class="body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus consequatur, laudantium odio dolorum laboriosam.</p>
+                        <img src="http://placehold.it/1000x500" alt="Graphic">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <!-- Footer -->
         <section id="footer">
             <ul class="icons">
