--- a/exec.html
+++ b/exec.html
@@ -33,6 +33,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <!-- Header -->
         <section id="image-header" class="dark">
         </section>
+        
+        <!-- Information -->
+        
 
         <!-- Footer -->
         <section id="footer">
