--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <img src="images/banner.png" alt="banner" class="center", style="width:1000px">
 
 
-        <!-- Timeline of Events, you can add pics with FB events and make them links to the FB event page-->
+        <!-- Timeline of Events, you can add pics with FB events and make them links to the FB event page
+            right now you can only have 5 events bt i feel like that's enough otherwise it's a lot of info at once
+        -->
         <section id=timeline>
-            <h1>Current Events</h1>
-            <p class="leader">Check out our most recent and upcoming events! Click each event for the FB page with more details!</p>
+            <h1>Recent and Upcoming Events</h1>
+            <p class="leader">Click each event for the FB page with more details!</p>
             <div class="demo-card-wrapper">
                 <div class="demo-card demo-card--step1">
                     <div class="head">
