--- a/about.html
+++ b/about.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+Tessellate by HTML5 UP
+html5up.net | @ajlkn
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Korean Student Association</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
-        
+    <head>
+        <title>Korean Student Association</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body>
+
         <!-- Navigation -->
         <nav>
             <ul>
@@ -30,31 +30,69 @@
             </ul>
         </nav>
 
-		<!-- Header -->
-			<section id="image-header" class="dark">
-			</section>
+        <!-- Header -->
+        <section id="image-header" class="dark">
+        </section>
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="https://twitter.com/ksa_uva" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/ksaatuva/?hc_ref=ARRKMUuN51ZCoqcR3fqPLBJxsIvA0woasqHzUUi5MKMCcfZLjB3t9jNUkwvPq0wkhCc&fref=nf" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/ksaatuva/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul>
-				<div class="copyright">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</section>
+        <!-- Information -->
+        <div id="promo-wrapper">
+            <section id="promo">
+                <h2 style="color:black; margin:0; font-weight:bold">Our Mission</h2>
+                <h3 style="color:black;">To create a community of members who are interested in spreading awareness of and/or learning about Korean and Korean American culture.</h3>
+            </section>
+        </div>
+        
+        <!-- Features 1 -->
+        <div class="wrapper">
+            <div class="container">
+                <div class="row">
+                    <section class="6u 12u(narrower) feature">
+                        <div class="image-wrapper first">
+                            <img src="images/About/culture.JPG" alt="" style="height:400px; width:600px" />
+                        </div>
+                        <header>
+                            <h1 style="color:black; font-weight:bold; text-align:center">Culture</h1>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
+                            sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
+                            adipiscing elit. Curabitur vel sem sit.</p>
+                    </section>
+                    <section class="6u 12u(narrower) feature">
+                        <div class="image-wrapper">
+                            <img src="images/About/community.jpg" alt="" style="height:auto; width:600px"/>
+                        </div>
+                        <header>
+                            <h1 style="color:black; font-weight:bold; text-align:center">Community</h1>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
+                            sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
+                            adipiscing elit. Curabitur vel sem sit.</p>
+                    </section>
+                </div>
+            </div>
+        </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+        <!-- Footer -->
+        <section id="footer">
+            <ul class="icons">
+                <li><a href="https://twitter.com/ksa_uva" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/ksaatuva/?hc_ref=ARRKMUuN51ZCoqcR3fqPLBJxsIvA0woasqHzUUi5MKMCcfZLjB3t9jNUkwvPq0wkhCc&fref=nf" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="https://www.instagram.com/ksaatuva/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            </ul>
+            <div class="copyright">
+                <ul class="menu">
+                    <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </div>
+        </section>
 
-	</body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+        <script src="assets/js/main.js"></script>
+
+    </body>
 </html>
