Changed culture pic on about page

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
                 <div class="row">
                     <section class="6u 12u(narrower) feature">
                         <div class="image-wrapper first">
-                            <img src="images/About/culture.JPG" alt="" style="height:400px; width:600px" />
+                            <img src="images/About/culture2.jpg" alt="" style="height:400px; width:600px" />
                         </div>
                         <header>
                             <h1 style="color:black; font-weight:bold; text-align:center">Culture</h1>
@@ -68,6 +68,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
                             sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
                             adipiscing elit. Curabitur vel sem sit.</p>
                     </section>
+                    
                 </div>
             </div>
         </div>
